--- a/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
@@ -23,7 +23,7 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-10">
             <div class="card">
 
 
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="card-body">
-                    <table class="table">
+                    <table class="table table-hover">
                         <thead class="thead-dark">
 
                             <tr>
