--- a/Soporte/SoporteWeb/Views/Tipoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Index.cshtml
@@ -20,51 +20,52 @@
         }
     </p>
 
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+                <div class="card">
 
-                <div class=" card-header">
-                    Lista de Servicios
-                </div>
+                    <div class=" card-header m-1 bg-dark">
+                        Lista de Servicios
+                    </div>
 
-                <div class="card-body">
-                    <table class="table">
-                        <thead class="thead-dark">
+                    <div class="card-body">
+                        <table class="table table-hover">
+                            <thead class="thead-dark">
 
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Name)
-                                </th>
-                                <th></th>
-                            </tr>
+                                <tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Name)
+                                    </th>
+                                    
+                                </tr>
 
-                        </thead>
+                            </thead>
 
 
-                        @foreach (var item in Model)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    <a href="@Url.Action("Edit", "Tipoes", new { id = item.Id })" title="Editar"><i class="fas fa-file-alt text-warning"></i></a>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        <a href="@Url.Action("Edit", "Tipoes", new { id = item.Id })" title="Editar"><i class="fas fa-file-alt text-warning"></i></a>
 
-                                    <a href="@Url.Action("Details", "Tipoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
+                                        <a href="@Url.Action("Details", "Tipoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
 
-                                    <a href="@Url.Action("Delete", "Tipoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-times-circle text-danger"></i></a>
+                                        <a href="@Url.Action("Delete", "Tipoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-times-circle text-danger"></i></a>
 
-                                </td>
-                            </tr>
-                        }
+                                    </td>
+                                </tr>
+                            }
 
-                    </table>
+                        </table>
+
+                    </div>
 
                 </div>
 
             </div>
-
         </div>
     </div>
-
