--- a/Soporte/SoporteWeb/Views/Home/About.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/About.cshtml
@@ -104,64 +104,103 @@
         </div>
         @* ---------------------------------------------------------------------------------------------------------- *@
     </div>
-    <h2>@ViewBag.Title.</h2>
+    <br />
+    <h2 class="text-center">@ViewBag.Title.</h2>
     @*<h3>@ViewBag.Message</h3>*@
 
+    <div class="">
+        <p class="text-center">
+            Tecnhical Support es una asociación de profesionales que brinda soluciones para el desarrollo de negocios a fin de responder a la creciente necesidad que tienen las organizaciones en sus operaciones y actividades diarias.
+        </p>
+    </div>
 
-    <footer class="ftco-footer ftco-section">
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Technical Support</h2>
-                        <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+    <div class="row row-cols-1 row-cols-md-2">
+        <div class="col mb-4">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/618613/pexels-photo-618613.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Misión</h5>
+                    <p class="card-text">
+                        “Proveer soluciones integrales de negocios orientadas a mejorar las
+                        operaciones diarias de empresas de diferentes sectores con la
+                        aplicación de herramientas administrativas adecuadas y el desarrollo
+                        constante de nuestros profesionales”.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col mb-4">
+            <div class="card">
+                <img src="https://images.pexels.com/photos/5915230/pexels-photo-5915230.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Visión</h5>
+                    <p class="card-text">
+                        “Ser líder nacional en la aplicación de mejores prácticas de negocios
+                        para empresas de cualquier sector, que las lleve de la mano en el
+                        desarrollo y mejora de sus procesos de negocios, basándonos en el
+                        crecimiento de nuestros colaboradores altamente calificados y
+                        comprometidos, así como la aplicación de herramientas de negocios”.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
+
+        <footer class="ftco-footer ftco-section">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Technical Support</h2>
+                            <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+
+                        </div>
                     </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Servicios</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
-                            <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
-                            <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
-                            <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Lista de Contacto</h2>
-                        <div class="block-23 mb-3">
-                            <ul>
-                                <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
-                                <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
-                                <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Servicios</h2>
+                            <ul class="list-unstyled">
+                                <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                                <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                                <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                                <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
                             </ul>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="ftco-footer-widget mb-4">
+                            <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                            <div class="block-23 mb-3">
+                                <ul>
+                                    <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                                    <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                                    <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
- 
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
 
-    <script src="~/Scripts/popper.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
 
-    <script src="~/Scripts/jquery.animateNumber.min.js"></script>
-    <script src="~/Scripts/jquery.easing.1.3.js"></script>
-    <script src="~/Scripts/jquery.magnific-popup.min.js"></script>
-    <script src="~/Scripts/jquery.stellar.min.js"></script>
-    <script src="~/Scripts/jquery.waypoints.min.js"></script>
-    <script src="~/Scripts/jquery-migrate-3.0.1.min.js"></script>
+        <script src="~/Scripts/popper.min.js"></script>
+        <script src="~/Scripts/bootstrap.min.js"></script>
 
-    <script src="~/Scripts/owl.carousel.min.js"></script>
-    <script src="~/Scripts/scrollax.min.js"></script>
+        <script src="~/Scripts/jquery.animateNumber.min.js"></script>
+        <script src="~/Scripts/jquery.easing.1.3.js"></script>
+        <script src="~/Scripts/jquery.magnific-popup.min.js"></script>
+        <script src="~/Scripts/jquery.stellar.min.js"></script>
+        <script src="~/Scripts/jquery.waypoints.min.js"></script>
+        <script src="~/Scripts/jquery-migrate-3.0.1.min.js"></script>
+
+        <script src="~/Scripts/owl.carousel.min.js"></script>
+        <script src="~/Scripts/scrollax.min.js"></script>
 
 </body>
 </html>
