--- a/Soporte/SoporteWeb/Views/Home/About.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/About.cshtml
@@ -146,61 +146,115 @@
         </div>
     </div>
 
+    <div class="">
 
-        <footer class="ftco-footer ftco-section">
-            <div class="container">
-                <div class="row mb-5">
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Technical Support</h2>
-                            <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+        <h3 class="text-center">Valores</h3>
 
-                        </div>
+    </div>
+
+    <div class="text-center">
+        <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Liderazgo
+            </a>
+
+        </p>
+        <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+                Tenemos un profundo compromiso por alcanzar resultados de liderazgo en nuestras diferentes áreas de responsabilidad con una visión muy clara de hacia dónde nos dirigimos. Enfocamos nuestros recursos en lograr objetivos y estrategias ganadoras. Desarrollamos la capacidad para llevar a cabo nuestras estrategias y eliminar barreras organizacionales.
+            </div>
+        </div>
+        <br />
+
+    </div>
+
+
+
+
+    <div class="text-center">
+        <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Integridad
+            </a>
+
+        </p>
+        <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+                Siempre tratamos de hacer lo que es correcto. Somos honestos y francos con cada uno de nosotros. Operamos siempre dentro de la letra y el espíritu de la Ley.
+            </div>
+        </div>
+        <br />
+    </div>
+
+    <div class="text-center">
+        <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Confianza
+            </a>
+
+        </p>
+        <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+                Respetamos a nuestros compañeros y a nuestros clientes, y los tratamos de la misma manera en que queremos ser tratados. Tenemos confianza en la capacidad y en las intenciones de los demás. Creemos que la gente trabaja mejor cuando existe un ambiente basado en la confianza.
+            </div>
+        </div>
+        <br />
+    </div>
+
+    <footer class="ftco-footer ftco-section">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Technical Support</h2>
+                        <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+
                     </div>
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Servicios</h2>
-                            <ul class="list-unstyled">
-                                <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
-                                <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
-                                <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
-                                <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
+                </div>
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Servicios</h2>
+                        <ul class="list-unstyled">
+                            <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                            <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                            <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                            <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                        <div class="block-23 mb-3">
+                            <ul>
+                                <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                                <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                                <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
                             </ul>
-                        </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="ftco-footer-widget mb-4">
-                            <h2 class="ftco-heading-2">Lista de Contacto</h2>
-                            <div class="block-23 mb-3">
-                                <ul>
-                                    <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
-                                    <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
-                                    <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
-                                </ul>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
 
 
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
 
-        <script src="~/Scripts/popper.min.js"></script>
-        <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/popper.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
 
-        <script src="~/Scripts/jquery.animateNumber.min.js"></script>
-        <script src="~/Scripts/jquery.easing.1.3.js"></script>
-        <script src="~/Scripts/jquery.magnific-popup.min.js"></script>
-        <script src="~/Scripts/jquery.stellar.min.js"></script>
-        <script src="~/Scripts/jquery.waypoints.min.js"></script>
-        <script src="~/Scripts/jquery-migrate-3.0.1.min.js"></script>
+    <script src="~/Scripts/jquery.animateNumber.min.js"></script>
+    <script src="~/Scripts/jquery.easing.1.3.js"></script>
+    <script src="~/Scripts/jquery.magnific-popup.min.js"></script>
+    <script src="~/Scripts/jquery.stellar.min.js"></script>
+    <script src="~/Scripts/jquery.waypoints.min.js"></script>
+    <script src="~/Scripts/jquery-migrate-3.0.1.min.js"></script>
 
-        <script src="~/Scripts/owl.carousel.min.js"></script>
-        <script src="~/Scripts/scrollax.min.js"></script>
+    <script src="~/Scripts/owl.carousel.min.js"></script>
+    <script src="~/Scripts/scrollax.min.js"></script>
 
 </body>
 </html>
